test_regress/t/t_func_tie_bad.out
%Error: t/t_func_tie_bad.v:11:15: Function/task output connected to constant instead of variable: 'b'
   11 |       func(0, 1'b1);
      |               ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
